<resources>
    <string name="app_name">MusicplayerClone</string>
    <string name="todo">TODO</string>
    <string name="more_app">More App</string>
    <string name="remove_adds">remove adds</string>
    <string name="add_in_batch_mode">add in batch mode</string>
    <string name="task_list">Task List</string>
    <string name="setting">setting</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="settings">Settings</string>
    <string name="close_app">Close App</string>
    <string name="spinner_title">Spinner Title</string>
    <string name="todolist">ToDoList</string>
    <string name="enter_quick_task_here">Enter quick task Here</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="task_title">Task Title</string>
    <string name="enter_your_task">Enter your Task</string>
    <string name="enter_task_title">Enter Task title</string>
    <string name="what_is_to_be_done">What is to be done?</string>
    <string name="set_reminder_date_and_time">Set reminder date and time</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="save_task">Save Task</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
    <string name="send_feedback">Send feedback</string>
    <string name="click_here">click here</string>
</resources>